changed element arangement when resolution smaller than 990 to main then aside. slidder disappears when resolution smaller than 1400. cannot make the content resize, just the view - to fix

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@
     max-width: 1000px;
     margin: auto;
     display: flex;
+
+    @media (max-width: 990px) {
+        flex-direction: column-reverse;
+    }
 }
 
 .aside {
@@ -20,6 +24,11 @@
     flex-direction: column;
     align-items: center;
     padding: 0 15px 0 15px;
+
+    @media (max-width: 990px) {
+        max-width: 100%;
+    }
+
 }
 
 .aside-content {
@@ -157,6 +166,10 @@
     display: flex;
     flex-direction: column;
     padding: 0 15px 0 15px;
+
+    @media (max-width: 990px) {
+        max-width: 100%;
+    }
 }
 
 .article {
@@ -231,6 +244,11 @@
     position: fixed;
     right: 0;
     top: 70%;
+
+    @media (max-width: 1400px) {
+        display: none;
+    }
+
 }
 
 .slider-text-box {
